# luwu_os

./: .gitignore  HARDWARE_PLAN.md  LICENSE  README.md  README_CN.md  requirements.txt
.xgo-blockly/: camera_calibration.json  lock.json
apps/ai/: asr_manager.py  config.json  config_default.json  emotion_manager.py  llm_manager.py  main.py  robot_tools.py  state_machine.py  tools.py  tts_manager.py  web_page.py  web_server.py
apps/ball_catch/: main.py
apps/ball_track/: main.py
apps/bluetooth_gamepad/: main.py  mapping_server.py  qr_page.py
apps/coding/: coding_page.py  config.py  main.py  managers.py
apps/demo_page/: main.py  preload_app.py
apps/face_follow/: main.py
apps/gamepad/: calibrate_joystick.py  joystick_adapter.py  main.py  mapping_server.py
apps/gesture/: main.py
apps/group_perform/: main.py
configs/: 99-fb-spi.rules  asound.conf  asound.state  boot-config.txt  cm4-old.config  detect_device.py  device.ini  hardware_autoconf.py  hotspot_ssid.txt  install.sh  kill-splash.sh  luwu-hw-autoconf.service  luwu-keys.dts  luwu-launcher.service  luwu-splash.service  luwu-splash.sh  luwu-undervolt-monitor.py  luwu-undervolt-monitor.sh  luwu-undervolt.service
docs/: ROS2_DOCKER_ARCH.md  migrate-to-opt.md  network-app.md  theme.md  系统鲁棒性设计.md
launcher/: CMakeLists.txt  PYQT_LAUNCHER_POC.md  demogridview.cpp  demogridview.h  devicetable.h  galleryview.cpp  galleryview.h  i18n.cpp  i18n.h  keyfilter.h  luwu_launcher  main.cpp  statusbar.cpp  statusbar.h
libs/: i18n.py
scripts/: snap.py
xgoBlocklyProjects/: blockly_generated_code.py
(+50 files in other folders)
